# sparv-kbner-plugin

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  pyproject.toml
assets/: 8sidor_SWENER_KBNER_comparison.md  Ikea_SWENER_KBNER_comparison.md
assets/8sidor-kbner/: config.yaml
assets/8sidor-kbner-problem/: config.yaml
assets/8sidor-swener/: config.yaml
assets/8sidor-swener-problem/: config.yaml
assets/8sidor-swener-problem/source/: document.xml
assets/8sidor-swener/source/: document.xml
assets/hello-kbner/: config.yaml
assets/hello-kbner/source/: dokument.txt
assets/ikea-kbner/: config.yaml
assets/ikea-swener/: config.yaml
assets/ikea-swener/source/: document.xml
assets/texts/: 8sidor-mini-1.xml  8sidor-mini-1000.xml  8sidor-mini-120.xml  8sidor-mini-180.xml  8sidor-mini-2.xml  8sidor-mini-210.xml  8sidor-mini-3.xml  8sidor-mini-30.xml  8sidor-mini-300.xml  8sidor-mini-60.xml  8sidor-mini-600.xml  8sidor-mini-problem.xml  ikea-example.xml
benches/8sidor-kbner/: create-benches.sh
benches/8sidor-kbner/texts-1/source/: 8sidor-mini-1.xml
benches/8sidor-kbner/texts-2/: config.yaml
benches/8sidor-kbner/texts-2/source/: 8sidor-mini-2.xml
benches/8sidor-kbner/texts-300/source/: 8sidor-mini-300.xml
benches/8sidor-kbner/texts-60/source/: 8sidor-mini-60.xml
benches/8sidor-swener/: create-bench.sh
benches/8sidor-swener/texts-1000/source/: 8sidor-mini-1000.xml
benches/8sidor-swener/texts-30/: config.yaml
python/sparv_kbner/: __init__.py  core.py
python/tests/: test_sparv_kbner.py
src/: lib.rs
(+6 files in other folders)
